@@ -31,6 +31,12 @@ PKG_CHECK_MODULES(HPPCORBASERVER, hppcobaserver_reqd)
 HPPCORBASERVER_PREFIX=`$PKG_CONFIG hppCorbaServer --variable=prefix`
 AC_SUBST(HPPCORBASERVER_PREFIX)
 
+PKG_CHECK_MODULES(KWSPLUS, kwsPlus)
+HPPRRTPLANNER_PREFIX=`$PKG_CONFIG kwsPlus --variable=prefix`
+AC_SUBST(KWSPLUS_CFLAGS)
+AC_SUBST(KWSPLUS_LIBS)
+AC_SUBST(KWSPLUS_PREFIX)
+
 AC_OUTPUT(
 	kppInterface.pc
 	Makefile
