@@ -25,10 +25,13 @@ libkppInterface_la_SOURCES = \
 
 libkppInterface_la_LDFLAGS= \
 	@HPPCORBASERVER_LIBS@ \
-	@KINEOPATHPLANNER_LIBS@
+	@KINEOPATHPLANNER_LIBS@ \
+	@KWSPLUS_LIBS@
 	-release $(PACKAGE_VERSION)
 
 libkppInterface_la_CPPFLAGS = \
 	-I$(top_srcdir)/include\
 	@HPPCORBASERVER_CFLAGS@ \
-	@KINEOPATHPLANNER_CFLAGS@
+	@KINEOPATHPLANNER_CFLAGS@ \
+	@KWSPLUS_CFLAGS@
+
