@@ -1,3 +1,5 @@
+2007/12/06
+	Added selections for kwsPlus steering methods.
 2007/12/05	
 	Added a panel for configuring planners.
 	Added a default delegate for roadmaps graphical display.
